<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chizmiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="chikana">CHIKA NA!</string>
    <string name="signup">SIGN UP</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="retypePassword">Re-type Password</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>

</resources>
